--- a/index.html
+++ b/index.html
@@ -11,9 +11,24 @@
         <input type="text" required>
         <label for="">Email</label>
     </div>
-    <div class="input-group">
-        <input type="password" required>
-        <label for="">Password</label>
-    </div>
+<div class="input-group">
+    <input type="password" id="password" required>
+    <label>Password</label>
+    <span class="toggle-password" id="togglePassword">👁</span>
+</div>
+
 </body>
 </html>
+
+
+
+<script>
+    const passwordInput = document.getElementById("password");
+    const toggle = document.getElementById("togglePassword");
+
+    toggle.addEventListener("click", () => {
+        const isPassword = passwordInput.type === "password";
+        passwordInput.type = isPassword ? "text" : "password";
+        toggle.textContent = isPassword ? "🙈" : "👁";
+    });
+</script>
